src/deploy/kubernetes/infra/06_addons/keycloak/application/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-application
  namespace: keycloak
  labels:
    app: keycloak-application
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30100
  selector:
    app: keycloak-application
  type: NodePort
